appId: host.exp.exponent
---
- launchApp:
    clearState: true
    stopApp: true
- assertVisible: "Log In"
- tapOn:
    id: "email-input"
- inputText: "test@example.com"
- tapOn:
    id: "password-input"
- inputText: "password123"
- tapOn: "Log In"
- assertVisible: "Gold List"
- tapOn: "Create"
- assertVisible: "Start a New Journey"
- tapOn:
    id: "list-name-input"
- inputText: "My First E2E List"
- tapOn: "Create List"
- assertVisible: "+ Add Word"
