appId: host.exp.exponent
---
- launchApp:
    clearState: true
    stopApp: true
- assertVisible: "Log In"
- tapOn:
    id: "email-input"
- inputText: "test@example.com"
- tapOn:
    id: "password-input"
- inputText: "password123"
- tapOn: "Log In"
- assertVisible: "Gold List"
